Update image path

--- a/09-Instagram-Sidebar/index.html
+++ b/09-Instagram-Sidebar/index.html
@@ -18,7 +18,7 @@
 
             <header class="sidebar-header">
                 <i class='logo-icon bx bxl-instagram'></i>
-                <img class="logo-img" src="/09-Instagram-Sidebar/logo.svg">
+                <img class="logo-img" src="logo.svg">
             </header>
 
             <ul class="sidebar-menu" role="list">
